[package]
name = "michelangelo"
description = "a work-in-process library for procedurally constructing 3D geometries"
version = "0.1.2"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]
repository = "https://github.com/aeickhoff/michelangelo"
license = "MIT"
[badges]
maintenance = { status = "experimental" }

[dependencies]
itertools = "0.7.6"
lyon_tessellation = "0.9.1"
compact = "0.2.8"
compact_macros = "0.1.0"
descartes = "0.1.11"