[package]
name = "michelangelo"
description = "a work-in-process library for procedurally constructing 3D geometries"
version = "0.2.1"
authors = ["Anselm Eickhoff <anselm.eickhoff@gmail.com>"]
repository = "https://github.com/aeickhoff/michelangelo"
license = "MIT"
edition = "2018"
[badges]
maintenance = { status = "experimental" }

[dependencies]
itertools = "0.7.11"
lyon_tessellation = "0.11.0"
compact = "0.2.13"
compact_macros = "0.1.0"
descartes = "0.1.18"